# RPGM-Games-Android-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/engine/: detect.cpp  detect.hpp
src/system/: extractor.cpp  extractor.hpp
